<resources>
    <string name="app_name">Auditoria</string>
    <string name="auditoria">Auditoria</string>
    <string name="login">Entrada de usuarios</string>
    <string name="entrar">entrar</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="start_audit">Iniciar auditoria</string>
    <string name="espere_un_momento">Espere un momento</string>
    <string name="no_internet_error">No hay conexión a internet</string>
    <string name="select_option">Seleccione una opción de respuesta</string>
    <string name="add_notes" >Indique sus observaciones</string>
    <string name="next_question">Siguiente pregunta</string>
    <string name="choose_and_option">Debe seleccionar una opción</string>
    <string name="description">Descripción</string>
    <string name="notes_required">Debe indicar sus notas</string>
    <string name="option_required">Debe indicar una opción de respuesta</string>
    <string name="not_selected">Sin selección</string>
    <string name="add_text_here">Indique sus notas</string>
    <string name="there_is_an_audit_in_progress">Hay una auditoria en curso</string>

</resources>
