<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:text="@string/login"
        android:textColor="#fff"
        android:textSize="26sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_title"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="30dp"
        android:background="#fff"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txt_email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/user"
                    android:drawableTint="#FF4081"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:text="beto@2gom.com.mx" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txt_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:drawableLeft="@drawable/lock"
                    android:drawableTint="#FF4081"
                    android:hint="@string/password"
                    android:inputType="numberPassword"
                    android:singleLine="true"
                    android:text="12345678" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="22dp"
                android:background="@color/colorPrimary"
                android:onClick="loginAction"
                android:text="@string/entrar"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>

    <ImageButton
        android:id="@+id/user_profile_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/login_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"

        android:elevation="4dp"
        android:scaleType="centerCrop"
        android:src="@drawable/no_avatar_m" />
</RelativeLayout>